kubernetes/home.vijayakumar.xyz/core/longhorn/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app: longhorn
    kustomize.toolkit.fluxcd.io/prune: disabled
