kubernetes/home.vijayakumar.xyz/core/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`longhorn.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  tls:
    secretName: home-vijayakumar-xyz
